--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         var baseLayers = {
                 "Grayscale": grayscale,
                 "Streets": streets,
-                "TN Map": tnmap
+                "State of TN Imagery": tnmap
         };
         
         var myStyle = {
